
  Project : SHTRIH-M JavaPOS fiscal printer driver
  Company : SHTRIH-M www.shtrih-m.ru (495) 787-6090
  Url     : https://github.com/shtrih-m/javapos_shtrih
    
********************************************************************************

  26.05.2021
  deviceServiceVersion = 1013621

  [-] Fixed error with tags 1085 and 1086 printing
  [+] Added tag 2108 processing

********************************************************************************

  11.05.2021
  deviceServiceVersion = 1013620

  [-] Fixed error with receipt item duplication
  [-] Fixed error with tag printing

********************************************************************************

  04.05.2021
  deviceServiceVersion = 1013619

  [-] Fixed error with receipt item duplication

********************************************************************************

  28.04.2021
  deviceServiceVersion = 1013618

  [-] Fixed error with prining operation tags
  [+] Added directIO command to add item codes, SMFPTR_DIO_ADD_ITEM_CODE


********************************************************************************

  16.04.2021
  deviceServiceVersion = 1013617

  [-] Fixed error with modelParameters error
  
  [+] Added directIO command to check marking codes
		SMFPTR_DIO_SAVE_MC_NOTIFICATIONS,
		SMFPTR_DIO_CHECK_ITEM_CODE2,
		SMFPTR_DIO_SYNC_REGISTERS,
		SMFPTR_DIO_FS_READ_MEM_SIZE,
		SMFPTR_DIO_FS_WRITE_TLV_BUFFER,
		SMFPTR_DIO_FS_READ_RANDOM_DATA,
		SMFPTR_DIO_FS_AUTHORIZE,
		SMFPTR_DIO_FS_READ_MC_STATUS,
		SMFPTR_DIO_FS_START_READ_MC_NOTIFICATIONS,
		SMFPTR_DIO_FS_READ_MC_NOTIFICATION
  
********************************************************************************

  05.04.2021
  deviceServiceVersion = 1013616

  [-] Fixed error with marking code check
  [+] Added flex command definitions commands.xml

********************************************************************************

  01.04.2021
  deviceServiceVersion = 1013615

  [+] Added FS 1.2 tag definitions