@@ -1226,8 +1226,8 @@ public class SMFiscalPrinterImpl implements SMFiscalPrinter, PrinterConst {
         if (!isPeace)
         {
             List<TLVItem> items = new ArrayList<TLVItem>();
-            items.add(new TLVItem(1023, String.valueOf(request.getQuantity())));
             items.add(new TLVItem(2108, String.valueOf(request.getUnit())));
+            items.add(new TLVItem(1023, String.valueOf(request.getQuantity())));
             TLVItem item = new TLVItem(1291); 
             items.add(item);
             item.getItems().add(new TLVItem(1293, String.valueOf(request.getNumerator())));
