@@ -1,5 +1,5 @@
 package com.shtrih.util;
 
 public class ServiceVersion {
-    public static final String VERSION = "620-2-gdf20875";
+    public static final String VERSION = "620-3-g0d1adbc";
 }
